<?xml version='1.0' encoding='utf-8'?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawerLayoutMain" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/fondo_principal">
        <com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbarMain" android:layout_width="0dp" android:layout_height="88dp" android:background="@drawable/bg_toolbar_moderno" android:clickable="true" android:elevation="8dp" android:focusable="true" android:paddingTop="24dp" android:paddingStart="8dp" android:paddingEnd="8dp" app:contentInsetStartWithNavigation="0dp" app:contentInsetStart="0dp" app:contentInsetEnd="0dp" app:logo="@drawable/ic_logo_bulb_toolbar" app:logoDescription="@string/descripcion_logo_consumoapp" app:title="@string/nombre_app_toolbar" app:titleMarginStart="8dp" app:titleTextColor="@color/texto_blanco" app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" app:subtitleTextColor="@color/azul_claro" app:subtitleTextAppearance="@style/ToolbarSubtitleSmall" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:navigationIconTint="@color/texto_blanco" />
        <TextView android:id="@+id/txtEstadoEsios" android:layout_width="0dp" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingTop="6dp" android:paddingEnd="16dp" android:paddingBottom="6dp" android:background="@color/fondo_secundario" android:text="@string/estado_esios_comprobando" android:textColor="@color/texto_secundario" android:textSize="12sp" android:maxLines="1" android:ellipsize="end" android:contentDescription="@string/descripcion_estado_esios" app:layout_constraintTop_toBottomOf="@id/toolbarMain" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
        <com.google.android.material.tabs.TabLayout android:id="@+id/tabLayoutEsios" android:layout_width="0dp" android:layout_height="64dp" android:layout_marginStart="12dp" android:layout_marginTop="10dp" android:layout_marginEnd="12dp" android:background="@drawable/bg_tabs_home_esios" android:elevation="2dp" app:tabMode="fixed" app:tabGravity="fill" app:tabInlineLabel="false" app:tabMinWidth="0dp" app:tabPaddingStart="0dp" app:tabPaddingEnd="0dp" app:tabIconTint="@color/tab_home_tint" app:tabTextColor="@color/tab_home_tint" app:tabSelectedTextColor="@color/boton_primario" app:tabBackground="@drawable/selector_tab_home_background" app:tabIndicator="@drawable/bg_tab_indicator_home" app:tabIndicatorColor="@color/boton_primario" app:tabIndicatorFullWidth="false" app:tabIndicatorHeight="4dp" app:tabRippleColor="@color/azul_claro" app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Caption" app:layout_constraintTop_toBottomOf="@id/toolbarMain" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
        <androidx.viewpager2.widget.ViewPager2 android:id="@+id/viewPagerEsios" android:layout_width="0dp" android:layout_height="0dp" android:background="@color/fondo_principal" app:layout_constraintTop_toBottomOf="@id/tabLayoutEsios" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView android:id="@+id/navigationViewMain" android:layout_width="292dp" android:layout_height="match_parent" android:layout_gravity="start" android:background="@color/fondo_blanco" app:headerLayout="@layout/header_menu_usuario" app:itemBackground="@drawable/selector_drawer_item_background" app:itemHorizontalPadding="18dp" app:itemIconPadding="18dp" app:itemIconTint="@color/titulo_principal" app:itemTextColor="@color/titulo_principal" app:menu="@menu/menu_app_navigation" />
</androidx.drawerlayout.widget.DrawerLayout>